deployment/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: githubcontrib
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8000
  selector:
    app: githubcontrib
