deployment/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: githubcontrib
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - githubcontrib.samarchyan.me
      secretName: githubcontrib-tls
  rules:
    - host: githubcontrib.samarchyan.me
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: githubcontrib
                port:
                  number: 80
